--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -29,6 +29,21 @@ The series was retitled New Adventure Comics with its 12th issue in January 1937
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics033.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics034.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics041.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics042.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics043.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics044.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics045.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics046.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics047.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics049.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics050.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics503.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
