--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -44,6 +44,26 @@ The series was retitled New Adventure Comics with its 12th issue in January 1937
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics048.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics049.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics050.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics051.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics052.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics054.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics055.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics056.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics057.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics058.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics059.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics060.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics061.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics062.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics063.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics064.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics065.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics066.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics067.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics068.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics069.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics070.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics503.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
