--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -64,6 +64,36 @@ The series was retitled New Adventure Comics with its 12th issue in January 1937
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics068.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics069.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics070.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics071.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics072.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics073.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics074.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics075.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics076.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics077.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics078.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics079.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics082.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics083.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics084.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics085.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics086.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics087.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics088.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics089.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics090.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics091.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics092.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics093.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics094.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics095.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics096.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics097.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics098.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics099.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics100.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics503.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
