--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -17,6 +17,8 @@ Adventure Comics began its nearly 50-year run in December 1935 under the title <
 </p><p>
 The series was retitled New Adventure Comics with its 12th issue in January 1937. Issue #32 (November 1938) saw the title changed again to Adventure Comics, which would remain the book's name until it ended with issue #503.
 </p><p>
+The title featured various characters but began focusing on Superman related (Superboy, Supergirl) by issue #103. Issues #32 - #103 are contained in the slideshow below, then jumps to the last issue #503.
+</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -94,6 +96,9 @@ The series was retitled New Adventure Comics with its 12th issue in January 1937
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics098.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics099.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics100.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics101.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics102.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureComics103.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdventureComics503.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
