--- a/FeatureBook/FeatureBook.html
+++ b/FeatureBook/FeatureBook.html
@@ -45,6 +45,43 @@ They eventually started to publish original adaptations of novels and in 1946, t
 <div class="mySlides" style="text-align: center;"><img src="FeatureBook018.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FeatureBook019.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FeatureBook020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook031.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook033.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook034.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook041.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook042.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook043.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook044.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook045.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook046.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook047.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook049.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook050.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook051.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook052.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook054.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook055.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook056.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FeatureBook057.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
