--- a/MightyBoosh/MightyBoosh.html
+++ b/MightyBoosh/MightyBoosh.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Mighty Boosh</title>
+<title>the Mighty Boosh</title>
 </head>
 
 <body>
-<img src="MightyBoosh1.jpg" title="title"> <br>
+<img src="MightyBoosh1.jpg" title="The Mighty Boosh"> <br>
 Series: 3 stage shoes 1998 - 2000, 20 TV Episodes 2003 - 2007<br>
 Producer: BBC<br>
 <p>
