--- a/XFiles/XFiles.html
+++ b/XFiles/XFiles.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>X-Files</title>
 </head>
 
 <body>
-<h2>X-Files</h2>
 <img src="XFiles.jpg"> <br>
 Creator: Chris Carter<br>
 Series: 1993-2002 TV (202 Episodes), 1998 Movies, $1 Billion (USD)<br>
 Publisher: Fox (21st Century Fox)<br>
 <p>
 The X-Files is an American science fiction drama television series created by Chris Carter. The original television series aired from September 10, 1993, to May 19, 2002, on Fox. The program spanned nine seasons, with 202 episodes. A short tenth season consisting of six episodes premiered on January 24, 2016. Following the ratings success of this revival, Fox announced in April 2017 that The X-Files would be returning for an eleventh season of ten episodes. The season premiered on January 3, 2018. 
+
 </p><p>
 In addition to the television series, two feature films have been released: The 1998 film The X-Files, which took place as part of the TV series continuity, and the stand-alone film The X-Files: I Want to Believe, released in 2008, six years after the original television run had ended.
 </p><p>
@@ -23,12 +24,23 @@ Early in the series, both agents become pawns in a larger conflict and come to t
 </p><p>
 The X-Files was inspired by earlier television series which featured elements of suspense and speculative fiction, including Alfred Hitchcock Presents, The Twilight Zone, Night Gallery, Tales from the Darkside, and especially Kolchak: The Night Stalker. When creating the main characters, Carter sought to reverse gender stereotypes by making Mulder a believer and Scully a skeptic. 
 </p><p>
-The first seven seasons featured Duchovny and Anderson equally. In the last two seasons, Anderson took precedence while Duchovny appeared intermittently. New main characters were introduced: FBI agents John Doggett (Robert Patrick) and Monica Reyes (Annabeth Gish). Mulder and Scully's boss, Assistant Director Walter Skinner (Mitch Pileggi), also became a main character. The first five seasons of The X-Files were filmed and produced in Vancouver, British Columbia, before eventually moving to Los Angeles to accommodate Duchovny. The series later returned to Vancouver to film The X-Files: I Want to Believe as well as the tenth season of the series.
-</p><p>
-The X-Files was a hit for the Fox network and received largely positive reviews, although its long-term story arc was criticized near the conclusion. Initially considered a cult series, it turned into a pop culture touchstone that tapped into public mistrust of governments and large institutions and embraced conspiracy theories and spirituality. Both the series itself and lead actors Duchovny and Anderson received multiple awards and nominations, and by the end it was the longest-running science fiction series in U.S. television history. 
-</p><p>
-The series also spawned a franchise which includes The Lone Gunmen spin-off, two theatrical films and accompanying merchandise. After the second theatrical film in 2008, the series fans continued to push for a third film to conclude the series' plot lines, and in March 2015, Fox announced that the series would return, with Carter as executive producer and writer and Duchovny, Anderson, Pileggi, Davis and Gish all reprising their roles.
-</p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
 
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="XFiles1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="XFiles2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="XFiles3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="XFiles4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="XFiles5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p>
 </body>
 </html>
