--- a/MightyBoosh/MightyBoosh.html
+++ b/MightyBoosh/MightyBoosh.html
@@ -33,6 +33,9 @@ After two years away from television, the Boosh returned in November 2007. Set i
 <div class="mySlides" style="text-align: center;"><img src="MightyBoosh1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MightyBoosh2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MightyBoosh3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MightyBoosh4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MightyBoosh5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MightyBoosh6.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
