--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -41,29 +41,50 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-The Seven Kingdoms of Westeros
+The Seven Kingdoms of Westeros<br>
+</p><p>
+<img src="houseStark.jpg" title="House Stark">
+<img src="NedStark.jpg" title="Ned Stark"><img src="CatelynStark.jpg" title="Catelyn Stark"><img src="SansaStark.jpg" title="Sansa Stark"><img src="JonSnow.jpg" title="Jon Snow"><img src="RobbStark.jpg" title="Robb Stark"><img src="AryaStark.jpg" title="Arya Stark"><img src="BranStark.jpg" title="Bran and Hodo">
 </p><p>
 The North - House Stark (Winter is Coming)<br>
 The Starks ruled the North until the betrayal of Robb Stark at the Red Wedding by Roose Bolton. Since then, it has been the Boltons who rule the North with their seat shifted to Winterfell from the Dreadfort. Karstark, Manderly, Umber, Reed and Mormont are the major vassal houses who swear allegiance to the Warden of the North.
 </p><p>
+<img src="houseArryn.jpg" title="House Arryn">
+<img src="LysaArryn.jpg" title="Lysa Aaryn"><img src="RobinArryn.jpg" title="Robin Arryn">
+</p><p>
 The Vale - House Arryn (As high as honor)<br>
 The Vale has been ruled by the Arryns since forever from their castle known as The Eyrie. After the death of Jon Arryn, Hand of the King to Robert Baratheon, there has been somewhat of a power vacuum in The Vale with Robin Arryn proving to be an incompetent ruler. Baelish, Waynwood and Royce are major vassal houses in The Vale.
+</p><p>
+<img src="houseTully.jpg" title="House Tully">
+<img src="BryndenTully.jpg" title="Bryden Tully"><img src="EdmureTully.jpg" title="Edmure Tully">
 </p><p>
 The Riverlands - House Tully (Family, duty, honor)<br>
 The Riverlands are ruled by House Tully from its seat at Riverrun. The Riverlands were a constant battleground during the Targaryen conquest. Houses Whent, Blackwood, Frey and Mallister make up the major vassal houses who pledge their allegience to Riverrun.
 </p><p>
+<img src="houseBaratheon.jpg" title="House Baratheon">
+<img src="RobertBaratheon.jpg" title="Robert Baratheon"><img src="StannisBaratheon.jpg" title="Stannis Baratheon"><img src="JoffreyBaratheon.jpg" title="Joffrey Baratheon"><img src="RenlyBaratheon.jpg" title="Renly Baratheon"><img src="TommenBaratheon.jpg" title="Tommen Baratheon"><img src="MyrcellaBaratheon.jpg" title="Myrcella Baratheon">
+</p><p>
 The Stormlands - House Baratheon (Ours is the fury)<br>
 The Stormlands were captured by Orys Baratheon, Aegon Targaryen’s bastard half-brother, during the War of Conquest. Storm’s End was ruled ever since for almost three centuries until Robert’s rebellion. After Stannis’ flight from Storm’s End, it is unclear who currently occupies a seat there. Connington, Dondarrion, Selmy and Tarth are the major vassal houses of the Stormlands.
+</p><p>
+<img src="houseLannister.jpg" title="House Lannister">
 </p><p>
 The Westerlands - House Lannister (Hear me roar!)<br>
 The Westerlands were known as the Kingdom of the Rock until before the Targaryen conquest. Since then, it has been ruled by House Lannister of Casterly Rock. It is one of the richest kingdoms of Westeros and was restored to glory under the able leadership of Tywin Lannister. Clegane, Payne, Swyft and Westerling are major vassal houses in the Westerlands.
 </p><p>
+<img src="houseTyrell.jpg" title="House Tyrell">
+</p><p>
 The Reach - House Tyrell (Growing strong)<br>
 The Reach is ruled by House Tyrell of Highgarden. It is the most fertile and most populated kingdom of Westeros, supplying livestock, wine and foodgrains to rest the of the lesser fertile kingdoms. Currently, House Tyrell occupies a significant position in King’s Landing after their alliance with the Lannisters. House Oakheart, Tarly and Florent constitute major vassal houses.
+</p><p>
+<img src="houseMartell.jpg" title="House Martell">
 </p><p>
 The Principality of Dorne - House Martell (Unbowed, unbent, unbroken)<br>
 Dorne has been ruled by House Martell of Sunspear. After the assassination of Doran Martell, the region is now under the control of Ellaria Sand, Oberyn Martell’s paramour. Dorne was the only kingdom to retain its independence during Aegon’s conquest and later joined the seven kingdoms through a marriage alliance. House Yronwood, Allyrion and Dayne consist of major vassal houses.
 </p><p>
+<img src="houseGreyjoy.jpg" title="House Greyjoy">
+</p><p>
+Iron Islands - House Greyjoy (We do not bow)<br>
 There are also the Iron Islands ruled by the Greyjoys of Pyke. But it is debated whether the Iron Islands are an independent kingdom, or just another part of the Riverlands.
 </p>
 </body>
