--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -30,61 +30,74 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones1.jpg" title="Ned on the Iron Throne"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones2.jpg" title="Dire Wolf and Free Folk aka Wildlings"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones3.jpg" title="The Night King"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones6.jpg" title ="Free Folk at the Wall"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones7.jpg" title="Brienne of Tarth"></div>
+<div class="mySlides" style="text-align: center;"><img src="JorahMormont.jpg" title="Jorah Mormont"></div>
+<div class="mySlides" style="text-align: center;"><img src="SamwellTarly.jpg" title="Samwell Tarly"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-The Seven Kingdoms of Westeros<br>
+The Kingdoms of Westeros<br>
 </p><p>
 <img src="houseStark.jpg" title="House Stark">
 <img src="NedStark.jpg" title="Ned Stark"><img src="CatelynStark.jpg" title="Catelyn Stark"><img src="SansaStark.jpg" title="Sansa Stark"><img src="JonSnow.jpg" title="Jon Snow"><img src="RobbStark.jpg" title="Robb Stark"><img src="AryaStark.jpg" title="Arya Stark"><img src="BranStark.jpg" title="Bran and Hodo">
 </p><p>
 The North - House Stark (Winter is Coming)<br>
 The Starks ruled the North until the betrayal of Robb Stark at the Red Wedding by Roose Bolton. Since then, it has been the Boltons who rule the North with their seat shifted to Winterfell from the Dreadfort. Karstark, Manderly, Umber, Reed and Mormont are the major vassal houses who swear allegiance to the Warden of the North.
-</p><p>
+</p><p><br>
 <img src="houseArryn.jpg" title="House Arryn">
 <img src="LysaArryn.jpg" title="Lysa Aaryn"><img src="RobinArryn.jpg" title="Robin Arryn">
 </p><p>
 The Vale - House Arryn (As high as honor)<br>
 The Vale has been ruled by the Arryns since forever from their castle known as The Eyrie. After the death of Jon Arryn, Hand of the King to Robert Baratheon, there has been somewhat of a power vacuum in The Vale with Robin Arryn proving to be an incompetent ruler. Baelish, Waynwood and Royce are major vassal houses in The Vale.
-</p><p>
+</p><p><br>
 <img src="houseTully.jpg" title="House Tully">
 <img src="BryndenTully.jpg" title="Bryden Tully"><img src="EdmureTully.jpg" title="Edmure Tully">
 </p><p>
 The Riverlands - House Tully (Family, duty, honor)<br>
 The Riverlands are ruled by House Tully from its seat at Riverrun. The Riverlands were a constant battleground during the Targaryen conquest. Houses Whent, Blackwood, Frey and Mallister make up the major vassal houses who pledge their allegience to Riverrun.
-</p><p>
+</p><p><br>
 <img src="houseBaratheon.jpg" title="House Baratheon">
-<img src="RobertBaratheon.jpg" title="Robert Baratheon"><img src="StannisBaratheon.jpg" title="Stannis Baratheon"><img src="JoffreyBaratheon.jpg" title="Joffrey Baratheon"><img src="RenlyBaratheon.jpg" title="Renly Baratheon"><img src="TommenBaratheon.jpg" title="Tommen Baratheon"><img src="MyrcellaBaratheon.jpg" title="Myrcella Baratheon">
+<img src="RobertBaratheon.jpg" title="Robert Baratheon"><img src="StannisBaratheon.jpg" title="Stannis Baratheon"><img src="JoffreyBaratheon.jpg" title="Joffrey Baratheon"><img src="RenlyBaratheon.jpg" title="Renly Baratheon"><img src="TommenBaratheon.jpg" title="Tommen Baratheon"><img src="MyrcellaBaratheon.jpg" title="Myrcella Baratheon"><img src="Melisandre.jpg" title="Melisandre">
 </p><p>
 The Stormlands - House Baratheon (Ours is the fury)<br>
 The Stormlands were captured by Orys Baratheon, Aegon Targaryen’s bastard half-brother, during the War of Conquest. Storm’s End was ruled ever since for almost three centuries until Robert’s rebellion. After Stannis’ flight from Storm’s End, it is unclear who currently occupies a seat there. Connington, Dondarrion, Selmy and Tarth are the major vassal houses of the Stormlands.
-</p><p>
+</p><p><br>
 <img src="houseLannister.jpg" title="House Lannister">
+<img src="TywinLannister.jpg" title="Tywin Lannister"><img src="TyrionLannister.jpg" title="Tyrion Lannister"><img src="JaimeLannister.jpg" title="Jaime Lannister"><img src="CerseiLannister.jpg" title="Cersei Lannister">
 </p><p>
 The Westerlands - House Lannister (Hear me roar!)<br>
 The Westerlands were known as the Kingdom of the Rock until before the Targaryen conquest. Since then, it has been ruled by House Lannister of Casterly Rock. It is one of the richest kingdoms of Westeros and was restored to glory under the able leadership of Tywin Lannister. Clegane, Payne, Swyft and Westerling are major vassal houses in the Westerlands.
-</p><p>
+</p><p><br>
 <img src="houseTyrell.jpg" title="House Tyrell">
+<img src="MargaeryTyrell.jpg" title="Margaery Tyrell"><img src="LorasTyrell.jpg" title="Loras Tyrell"><img src="OlennaTyrell.jpg" title="Orlenna Tyrell">
 </p><p>
 The Reach - House Tyrell (Growing strong)<br>
 The Reach is ruled by House Tyrell of Highgarden. It is the most fertile and most populated kingdom of Westeros, supplying livestock, wine and foodgrains to rest the of the lesser fertile kingdoms. Currently, House Tyrell occupies a significant position in King’s Landing after their alliance with the Lannisters. House Oakheart, Tarly and Florent constitute major vassal houses.
-</p><p>
+</p><p><br>
 <img src="houseMartell.jpg" title="House Martell">
+<img src="OberynMartell.jpg" title="Oberyn Martell"><img src="DoranMartell.jpg" title="Doran Martell"><img src="EllariaSand.jpg" title="Ellaria Sand">
 </p><p>
 The Principality of Dorne - House Martell (Unbowed, unbent, unbroken)<br>
 Dorne has been ruled by House Martell of Sunspear. After the assassination of Doran Martell, the region is now under the control of Ellaria Sand, Oberyn Martell’s paramour. Dorne was the only kingdom to retain its independence during Aegon’s conquest and later joined the seven kingdoms through a marriage alliance. House Yronwood, Allyrion and Dayne consist of major vassal houses.
+</p><p><br>
+<img src="houseTargaryen.jpg" title="House Targaryen">
+<img src="DaenerysTargaryen.jpg" title="Daenerys Targaryen"><img src="ViserysTargaryen.jpg" title="Viserys Targaryen">
 </p><p>
-<img src="houseGreyjoy.jpg" title="House Greyjoy">
+Meereen - House Targaryen (Fire and Blood)<br>
+One of the forty ancient noble houses known as dragonlords who ruled the Valyrian Freehold, a great empire spanning most of the eastern continent. The Targaryens were one of the few families to survive the doom of Valyria thanks to relocating their dragons and family to the island of Dragonstone. The Targaryens would rule the Kingdom of the Iron Throne for nearly three centuries, before being removed from power during Robert's Rebellion as they were cast down by House Baratheon and its allies.
+</p><p><br>
+<img src="houseGreyjoy.jpg" title="House Greyjoy - We do not sow">
+<img src="TheonGreyjoy.jpg" title="Theon Greyjoy"><img src="YaraGreyjoy.jpg" title="Yara Greyjoy"><img src="BalonGreyjoy.jpg" title="Balon Greyjoy"><img src="EuronGreyjoy.jpg" title="Euron Greyjoy">
 </p><p>
-Iron Islands - House Greyjoy (We do not bow)<br>
+Iron Islands - House Greyjoy (We do not Sow)<br>
 There are also the Iron Islands ruled by the Greyjoys of Pyke. But it is debated whether the Iron Islands are an independent kingdom, or just another part of the Riverlands.
 </p>
 </body>
