--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -39,6 +39,14 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones7.jpg" title="Brienne of Tarth"></div>
 <div class="mySlides" style="text-align: center;"><img src="JorahMormont.jpg" title="Jorah Mormont"></div>
 <div class="mySlides" style="text-align: center;"><img src="SamwellTarly.jpg" title="Samwell Tarly"></div>
+<div class="mySlides" style="text-align: center;"><img src="Littlefinger.jpg" title="Petyr Littlefinger Baelish"></div>
+<div class="mySlides" style="text-align: center;"><img src="LordVarys.jpg" title="Lord Varys"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavosSeaworthShireen.jpg" title="Davos Seaworth and Shireen"></div>
+<div class="mySlides" style="text-align: center;"><img src="Missandei.jpg" title="Missandei"></div>
+<div class="mySlides" style="text-align: center;"><img src="TheHound.jpg" title="The Hound"></div>
+<div class="mySlides" style="text-align: center;"><img src="GrandMaesterPycelle.jpg" title="Grand Maester Pycelle"></div>
+<div class="mySlides" style="text-align: center;"><img src="EddisonTollett.jpg" title="Eddison Tollett"></div>
+<div class="mySlides" style="text-align: center;"><img src="PodrickPayne.jpg" title="Podrick Payne"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
