--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -31,22 +31,37 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones1.jpg" title="Ned on the Iron Throne"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones2.jpg" title="Dire Wolf and Free Folk aka Wildlings"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones2.jpg" title="Dire Wolf and Gilly"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones3.jpg" title="The Night King"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones6.jpg" title ="Free Folk at the Wall"></div>
-<div class="mySlides" style="text-align: center;"><img src="GameOfThrones7.jpg" title="Brienne of Tarth"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones4.jpg" title="So Many Characters!"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones5.jpg" title="Khaleesi"></div>
 <div class="mySlides" style="text-align: center;"><img src="JorahMormont.jpg" title="Jorah Mormont"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones6.jpg" title ="Free Folk (Wildlings) at the Wall"></div>
+<div class="mySlides" style="text-align: center;"><img src="GameOfThrones7.jpg" title="Brienne of Tarth"></div>
+<div class="mySlides" style="text-align: center;"><img src="PodrickPayne.jpg" title="Podrick Payne"></div>
 <div class="mySlides" style="text-align: center;"><img src="SamwellTarly.jpg" title="Samwell Tarly"></div>
+<div class="mySlides" style="text-align: center;"><img src="Gilly.jpg" title="Gilly"></div>
 <div class="mySlides" style="text-align: center;"><img src="Littlefinger.jpg" title="Petyr Littlefinger Baelish"></div>
 <div class="mySlides" style="text-align: center;"><img src="LordVarys.jpg" title="Lord Varys"></div>
 <div class="mySlides" style="text-align: center;"><img src="DavosSeaworthShireen.jpg" title="Davos Seaworth and Shireen"></div>
-<div class="mySlides" style="text-align: center;"><img src="Missandei.jpg" title="Missandei"></div>
 <div class="mySlides" style="text-align: center;"><img src="TheHound.jpg" title="The Hound"></div>
 <div class="mySlides" style="text-align: center;"><img src="GrandMaesterPycelle.jpg" title="Grand Maester Pycelle"></div>
 <div class="mySlides" style="text-align: center;"><img src="EddisonTollett.jpg" title="Eddison Tollett"></div>
-<div class="mySlides" style="text-align: center;"><img src="PodrickPayne.jpg" title="Podrick Payne"></div>
+<div class="mySlides" style="text-align: center;"><img src="BronnDragonpit.jpg" title="Bronn Dragonpit"></div>
+<div class="mySlides" style="text-align: center;"><img src="TormundGiantsbane.jpg" title="Tormund Giantsbane"></div>
+<div class="mySlides" style="text-align: center;"><img src="Ygritte.jpg" title="Ygritte"></div>
+<div class="mySlides" style="text-align: center;"><img src="Missandei.jpg" title="Missandei"></div>
+<div class="mySlides" style="text-align: center;"><img src="GreyWorm.jpg" title="Grey Worm"></div>
+<div class="mySlides" style="text-align: center;"><img src="RamsayBolton.jpg" title="Ramsay Bolton"></div>
+<div class="mySlides" style="text-align: center;"><img src="RooseBolton.jpg" title="Roose Bolton"></div>
+<div class="mySlides" style="text-align: center;"><img src="Gendry.jpg" title="Gendry"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaarioNaharis.jpg" title="Daario Naharis"></div>
+<div class="mySlides" style="text-align: center;"><img src="Jaqen.jpg" title="Jaqen"></div>
+<div class="mySlides" style="text-align: center;"><img src="Olly.jpg" title="Olly"></div>
+<div class="mySlides" style="text-align: center;"><img src="Osha.jpg" title="Osha"></div>
+<div class="mySlides" style="text-align: center;"><img src="LancelLannister.jpg" title="Lancel Lannister"></div>
+<div class="mySlides" style="text-align: center;"><img src="HighSparrow.jpg" title="High Sparrow"></div>
+<div class="mySlides" style="text-align: center;"><img src="HotPie.jpg" title="Hot Pie"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
