--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -36,6 +36,7 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones4.jpg" title="So Many Characters!"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones5.jpg" title="Khaleesi"></div>
 <div class="mySlides" style="text-align: center;"><img src="JorahMormont.jpg" title="Jorah Mormont"></div>
+<div class="mySlides" style="text-align: center;"><img src="JeorMormont.jpg" title="Jeor Mormont"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones6.jpg" title ="Free Folk (Wildlings) at the Wall"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones7.jpg" title="Brienne of Tarth"></div>
 <div class="mySlides" style="text-align: center;"><img src="PodrickPayne.jpg" title="Podrick Payne"></div>
@@ -62,6 +63,8 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="mySlides" style="text-align: center;"><img src="LancelLannister.jpg" title="Lancel Lannister"></div>
 <div class="mySlides" style="text-align: center;"><img src="HighSparrow.jpg" title="High Sparrow"></div>
 <div class="mySlides" style="text-align: center;"><img src="HotPie.jpg" title="Hot Pie"></div>
+<div class="mySlides" style="text-align: center;"><img src="ThorosOfMyr.jpg" title="Thoros of Myr"></div>
+<div class="mySlides" style="text-align: center;"><img src="JojenReed.jpg" title="Jojen Reed"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
