--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -67,6 +67,8 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="mySlides" style="text-align: center;"><img src="JojenReed.jpg" title="Jojen Reed"></div>
 <div class="mySlides" style="text-align: center;"><img src="KhalDrogo.jpg" title="Khal Drogo"></div>
 <div class="mySlides" style="text-align: center;"><img src="BericDondarrion.jpg" title="Beric Dondarrion"></div>
+<div class="mySlides" style="text-align: center;"><img src="Locke.jpg" title="Locke"></div>
+<div class="mySlides" style="text-align: center;"><img src="SandSnakes.jpg" title="Sand Snakes"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
