--- a/GameOfThrones/GameOfThrones.html
+++ b/GameOfThrones/GameOfThrones.html
@@ -37,6 +37,7 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones5.jpg" title="Khaleesi"></div>
 <div class="mySlides" style="text-align: center;"><img src="JorahMormont.jpg" title="Jorah Mormont"></div>
 <div class="mySlides" style="text-align: center;"><img src="JeorMormont.jpg" title="Jeor Mormont"></div>
+<div class="mySlides" style="text-align: center;"><img src="LyannaMormont.jpg" title="Lyanna Mormont"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones6.jpg" title ="Free Folk (Wildlings) at the Wall"></div>
 <div class="mySlides" style="text-align: center;"><img src="GameOfThrones7.jpg" title="Brienne of Tarth"></div>
 <div class="mySlides" style="text-align: center;"><img src="PodrickPayne.jpg" title="Podrick Payne"></div>
@@ -46,11 +47,13 @@ The third story arc centers on the longstanding brotherhood charged with defendi
 <div class="mySlides" style="text-align: center;"><img src="LordVarys.jpg" title="Lord Varys"></div>
 <div class="mySlides" style="text-align: center;"><img src="DavosSeaworthShireen.jpg" title="Davos Seaworth and Shireen"></div>
 <div class="mySlides" style="text-align: center;"><img src="TheHound.jpg" title="The Hound"></div>
+<div class="mySlides" style="text-align: center;"><img src="TheMountain.jpg" title="The Mountain"></div>
 <div class="mySlides" style="text-align: center;"><img src="GrandMaesterPycelle.jpg" title="Grand Maester Pycelle"></div>
 <div class="mySlides" style="text-align: center;"><img src="EddisonTollett.jpg" title="Eddison Tollett"></div>
 <div class="mySlides" style="text-align: center;"><img src="BronnDragonpit.jpg" title="Bronn Dragonpit"></div>
 <div class="mySlides" style="text-align: center;"><img src="TormundGiantsbane.jpg" title="Tormund Giantsbane"></div>
 <div class="mySlides" style="text-align: center;"><img src="Ygritte.jpg" title="Ygritte"></div>
+<div class="mySlides" style="text-align: center;"><img src="Karsi.jpg" title="Karsi"></div>
 <div class="mySlides" style="text-align: center;"><img src="Missandei.jpg" title="Missandei"></div>
 <div class="mySlides" style="text-align: center;"><img src="GreyWorm.jpg" title="Grey Worm"></div>
 <div class="mySlides" style="text-align: center;"><img src="RamsayBolton.jpg" title="Ramsay Bolton"></div>
