--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -13,7 +13,7 @@ Series: 472 issues (#32-503) 1938 - 1983.<br>
 (#1-11 New Comics, #12-31 New Adventure Comics)<br>
 Publisher: National Allied, DC <br>
 <p>
-Adventure Comics began its nearly 50-year run in December 1935 under the title <a href="../NewComics/NewComics.html">New Comics</a>, which was only the second comic book series published by National Allied Publications, now DC Comics. 
+Adventure Comics began its nearly 50-year run in December 1935 under the title <a href="../NewComics/NewComics.html">New Comics</a>, which was only the second comic book series published by National Allied Publications, now DC Comics. And the first series, <a href="../MoreFun/MoreFun.html"> More Fun</a> which merged into Adventure Comics.
 </p><p>
 The series was retitled New Adventure Comics with its 12th issue in January 1937. Issue #32 (November 1938) saw the title changed again to Adventure Comics, which would remain the book's name until it ended with issue #503.
 </p><p>
