--- a/OmegaTheUnknown/OmegaTheUnknown.html
+++ b/OmegaTheUnknown/OmegaTheUnknown.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-<img src="OmegaTheUnknown1.jpg" title="Omega The Unknown"> <br>
-Series: 10 issues 1976 - 1977, 10 issues 2007 - 2008<br>
+<img src="OmegaTheUnknown1.jpg" title="Omega The Unknown"> <img src="OmegaTheUnknown2007TPB.jpg">
+<br>
+Series: 10 issues 1976 - 1977, 10 issues 2007 - 2008, 1 TPB collection 2008<br>
 Publisher: Marvel<br>
 <p>
 Omega the Unknown was an American comic book published by Marvel Comics from 1976 to 1977, featuring the eponymous fictional character. The series, written by Steve Gerber and Mary Skrenes and illustrated by Jim Mooney, ran for 10 issues before cancellation for low sales. 
